--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -3,9 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>about</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -15,13 +13,12 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">about</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-    <p><a routerLink="/about">About</a></p>
+    <p><a routerLink="team">Team</a></p>
+    <p><a routerLink="history">History</a></p>
   </div>
 </ion-content>
